# earth-walkers

./: CMakeLists.txt  Notes.org  game.c  linear_algebra.c  linear_algebra.h  main.c  misc.c  misc.h  noise.c  noise.h  physics.c  physics.h  render.c  render.h  terrain.c  terrain.h
shaders/: fragment_shader_test.glsl  vertex_shader_test.glsl
