project(EarthWalkers)

# include_directories("C:\Users\phi\box2d\include"
#   "C:/Users/phi/Downloads/SFML-2.5.1-windows-vc15-64-bit/SFML-2.5.1/include")

# link_directories("C:\Users\phi\box2d\build\src\Debug"
#   "c:/Users/phi/Downloads/SFML-2.5.1-windows-vc15-64-bit/SFML-2.5.1/lib")

add_executable(EarthWalkers
  main.c)
